# ConsoleCpp

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  ConsoleCppApplication  Makefile  README.md  cmake_install.cmake  log.txt
example/: Main.cpp
include/: ConsoleCpp.hpp
src/: BackgroundColor.cpp  BackgroundColor.hpp  ConsoleAttributes.cpp  ConsoleAttributes.hpp  ConsoleMode.cpp  ConsoleMode.hpp  Delim.hpp  DelimStyle.cpp  DelimStyle.hpp  Font.cpp  Font.hpp  ForegroundColor.cpp  ForegroundColor.hpp  Helpers.hpp  Keyboard.hpp  Print.hpp  PrintCxx17.cpp  PrintCxx23.cpp  PrintMode.cpp  PrintMode.hpp  Subwindow.hpp  TwoDimArrWrapper.hpp  UnixCode.cpp  Utils.cpp  Utils.hpp  WinCode.cpp  WindowConsole.cpp  WindowConsole.hpp
